--- a/notebooks/environment_dev.ipynb
+++ b/notebooks/environment_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "from gyms.twenty_questions.env import TwentyQuestionsPolicyEnvironment\n",
     "from synthetic_data.generation import get_generation_wrapper\n",
     "\n",
-    "generation_wrapper = get_generation_wrapper(\"gpt-4o\")\n",
+    "generation_wrapper = get_generation_wrapper(\"deepseek-r1\")\n",
     "env = TwentyQuestionsPolicyEnvironment(generation_wrapper)"
    ]
   },
@@ -34,8 +34,8 @@
     "env.reset()\n",
     "done = False\n",
     "while not done:\n",
-    "    reward, done = await env.step()\n",
-    "    print(reward, done)"
+    "    done = await env.step()\n",
+    "print(\"Game over\")"
    ]
   },
   {
