wip - txt stuff

--- a/notebooks/gutenberg_annotate.ipynb
+++ b/notebooks/gutenberg_annotate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,7 @@
     "os.environ[\"HF_HUB_ENABLE_HF_TRANSFER\"] = \"1\"\n",
     "sys.path.append(\"..\")\n",
     "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "df = pl.read_parquet(\"pile.parquet\")"
+    "%autoreload 2"
    ]
   },
   {
@@ -22,14 +21,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from synthetic_data.tasks.writing import WritingScoreAnnotate\n",
+    "from synthetic_data.tasks.writing import WritingScoreAnnotate, GutenbergBacktranslationFromTxt\n",
     "from synthetic_data.utils import ldictl\n",
+    "# df = pl.read_parquet(\"pile.parquet\")\n",
     "\n",
-    "input_df: pl.DataFrame = pl.read_parquet(\"../dataset_files/gutenberg_backtranslate.parquet\")\n",
-    "task = WritingScoreAnnotate()\n",
+    "# input_df: pl.DataFrame = pl.read_parquet(\"../dataset_files/gutenberg_backtranslate.parquet\")\n",
+    "task = GutenbergBacktranslationFromTxt()\n",
     "\n",
-    "mock_batch = ldictl(input_df.head(4).to_dicts())\n",
-    "len(task.format_input_conversation(mock_batch))"
+    "# mock_batch = ldictl(input_df.head(4).to_dicts())\n",
+    "dataset = task.load_custom()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task_out = task.format_input_conversation(dataset[0:16])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(task_out[0][0]['content'])"
    ]
   },
   {
@@ -73,7 +91,7 @@
    "source": [
     "import tiktoken\n",
     "from synthetic_data.gutenberg_parser import super_cleaner\n",
-    "from synthetic_data.tasks.writing import find_valid_chunks\n",
+    "from synthetic_data.tasks.writing import find_valid_paragraph_chunks\n",
     "from IPython.display import display, Markdown\n",
     "\n",
     "tiktoken_encoder = tiktoken.get_encoding(\"o200k_base\")\n",
@@ -84,7 +102,7 @@
     "    paragraphs = super_cleaner(text)\n",
     "\n",
     "    # find chunks of consecutive paragraphs with dialogue and at least 3 sentences\n",
-    "    valid_chunks = find_valid_chunks(paragraphs, tiktoken_encoder)\n",
+    "    valid_chunks = find_valid_paragraph_chunks(paragraphs, tiktoken_encoder)\n",
     "    display(Markdown(f\"### {row['title']}\"))\n",
     "    for chunk in valid_chunks:\n",
     "        display(Markdown(chunk[0]))\n",
